--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+    /* body */
     body{
       background-color: hsl(212, 45%, 89%);
       font-size: 15px;
